--- a/unsubscribe - English (EN).html
+++ b/unsubscribe - English (EN).html
@@ -252,5 +252,15 @@ a:hover, a:focus {
 
 <!-- ============ END Footer ============ -->
 
+<!-- Google Tag Manager -->
+<script>
+(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+j=d.createElement(s),dl=l!='dataLayer'?'&amp;l='+l:'';j.async=true;j.src=
+'//www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+})(window,document,'script','dataLayer','GTM-PKTQGK');
+</script>
+<!-- End Google Tag Manager -->
+
 </body>
 </html>
