--- a/confirmation - Japanese (JP).html
+++ b/confirmation - Japanese (JP).html
@@ -172,12 +172,14 @@ a:hover, a:focus {
 
 <!-- ============ END Footer ============ -->
 
-<!-- Google Tag Manager 6/15 -->
-<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+<!-- Google Tag Manager -->
+<script>
+(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
 new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
 j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 '//www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-})(window,document,'script','dataLayer','GTM-MCNB8L');</script>
+})(window,document,'script','dataLayer','GTM-PKTQGK');
+</script>
 <!-- End Google Tag Manager -->
 
 </body>
