--- a/confirmation - Korean (KR).html
+++ b/confirmation - Korean (KR).html
@@ -8,9 +8,9 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
-<meta name="com.silverpop.brandeddomains" content="www.pages04.net,bowker.com,go.proquest.com,proquest.com,proquest.mkt5049.com,stage.www.proquest.com,trials.proquest.com,www.proquest.com" />
-<meta name="com.silverpop.defaultsource" content="Web" />
-<meta name="com.silverpop.cothost" content="engage4.silverpop.com" />
+<meta name="com.silverpop.brandeddomains" content="www.pages04.net,bowker.com,go.proquest.com,proquest.com,proquest.mkt5049.com,stage.www.proquest.com,trials.proquest.com,www.proquest.com">
+<meta name="com.silverpop.defaultsource" content="Web">
+<meta name="com.silverpop.cothost" content="engage4.silverpop.com">
 
 <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Open+Sans" />
 <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Montserrat" />
@@ -172,12 +172,14 @@ a:hover, a:focus {
 
 <!-- ============ END Footer ============ -->
 
-<!-- Google Tag Manager 6/15 -->
-<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+<!-- Google Tag Manager -->
+<script>
+(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
 new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
 j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 '//www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-})(window,document,'script','dataLayer','GTM-MCNB8L');</script>
+})(window,document,'script','dataLayer','GTM-PKTQGK');
+</script>
 <!-- End Google Tag Manager -->
 
 </body>
